# dferry

./: CMakeLists.txt  plan.txt
applications/: CMakeLists.txt  analyzer.cpp  dfer.cpp  setupeavesdropping.h
applications/analyzer/: CMakeLists.txt  analyzer.cpp  analyzermainwindow.cpp  analyzermainwindow.h  argumentsmodel.cpp  eavesdroppermodel.cpp  eavesdroppermodel.h  eavesdropperthread.cpp  eavesdropperthread.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  messagesortfilter.cpp  messagesortfilter.h
applications/analyzerpart/: CMakeLists.txt  argumentsmodel.cpp  dferanalyzer_part.cpp  dferanalyzer_part.desktop  eavesdroppermodel.cpp  eavesdropperthread.cpp  eavesdropperthread.h  mainwidget.cpp  mainwidget.ui  messagesortfilter.h
buslogic/: authclient.cpp  authclient.h  connectaddress.cpp  connectioninfo.cpp  connectioninfo.h  imessagereceiver.cpp  imessagereceiver.h  itransceiverclient.cpp  itransceiverclient.h  peeraddress.cpp  peeraddress.h  pendingreply.cpp  pendingreply.h  pendingreply_p.h  transceiver.cpp  transceiver.h  transceiver_p.h
client/: introspection.cpp  introspection.h
cmake/: FindLibTinyxml2.cmake  FindValgrind.cmake
connection/: authclient.cpp  authclient.h  authnegotiator.cpp  authnegotiator.h  connectaddress.cpp  connectaddress.h  connection.cpp  connection.h  connection_p.h  epolleventdispatcher.cpp  epolleventdispatcher.h  epolleventpoller.h  eventdispatcher.cpp  iauthmechanism.h  iconnection.cpp  iconnection.h  iconnectionclient.cpp  iconnectionclient.h  iconnectionstatelistener.cpp  iconnectionstatelistener.h  ieventdispatcher.cpp  ieventdispatcher.h  ieventpoller.h  imessagereceiver.cpp  imessagereceiver.h  inewconnectionlistener.cpp  inewconnectionlistener.h  ipserver.cpp  ipserver.h  ipsocket.cpp  ipsocket.h  iserver.cpp  iserver.h  itransport.cpp  itransport.h  itransportlistener.cpp  localserver.cpp  localserver.h  localsocket.cpp  localsocket.h  (+10 more)
events/: epolleventpoller.cpp  epolleventpoller.h  event.cpp  event.h  eventdispatcher.cpp  eventdispatcher.h  eventdispatcher_p.h  foreigneventloopintegrator.cpp  foreigneventloopintegrator.h  ieventpoller.cpp  ieventpoller.h  iioeventclient.cpp  iioeventclient.h  iioeventforwarder.cpp  iioeventforwarder.h  iioeventlistener.cpp  iioeventlistener.h  iioeventsource.cpp  iioeventsource.h  platformtime.cpp  platformtime.h  selecteventpoller_unix.cpp  selecteventpoller_unix.h  selecteventpoller_win32.cpp  selecteventpoller_win32.h  socketpair.h  timer.cpp  timer.h
serialization/: CMakeLists.txt  argumentlist.cpp  argumentlist.h  arguments.cpp  arguments.h  arguments_p.h  argumentsreader.cpp  argumentswriter.cpp  basictypeio.h  icompletionclient.cpp  icompletionclient.h  message.cpp  message.h  message_p.h  types.cpp  types.h
tests/: CMakeLists.txt  testutil.cpp  testutil.h
tests/buslogic/: CMakeLists.txt  tst_pendingreply.cpp  tst_threads.cpp
tests/client/: CMakeLists.txt  introspect1.xml  tst_introspection.cpp
tests/connection/: CMakeLists.txt  tst_connectaddress.cpp  tst_errorpropagation.cpp  tst_pendingreply.cpp  tst_server.cpp  tst_threads.cpp
tests/events/: CMakeLists.txt  tst_timer.cpp  tst_timer_slow.cpp
tests/serialization/: CMakeLists.txt  argumentlist.cpp  message.cpp  tst_argumentlist.cpp  tst_arguments.cpp  tst_arguments_slow.cpp  tst_message.cpp
transport/: ipresolver.cpp  ipresolver.h  ipserver.cpp  ipserver.h  ipsocket.cpp  ipsocket.h  iserver.cpp  iserver.h  itransport.cpp  itransport.h  itransportlistener.cpp  itransportlistener.h  localserver.cpp  localserver.h  localsocket.cpp  localsocket.h  platform.h  stringtools.cpp  stringtools.h
util/: commutex.h  error.cpp  error.h  export.h  icompletionclient.h  icompletionlistener.cpp  icompletionlistener.h  iovaluetypes.h  malloccache.h  sha1.c  spinlock.h  types.cpp  types.h  valgrind-noop.h  winutil.cpp  winutil.h
utilities/: CMakeLists.txt  analyzermainwindow.cpp  analyzermainwindow.h  analyzerui.rc  dfer.cpp  dselrig.cpp  dselrigui.rc  punk.cpp  rigmainwindow.cpp  rigmainwindow.h
utilities/analyzerpart/: CMakeLists.txt  dferanalyzer_part.cpp  dferanalyzer_part.desktop  dferanalyzer_part.h  eavesdroppermodel.cpp  eavesdropperthread.cpp  eavesdropperthread.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  messagesortfilter.cpp  messagesortfilter.h
utilities/dselrigpart/: CMakeLists.txt  argumentsmodel.cpp  argumentsmodel.h  dselrig_part.cpp  dselrig_part.desktop  dselrig_part.h  eavesdroppermodel.cpp  eavesdroppermodel.h  eavesdropperthread.cpp  eavesdropperthread.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  messagesortfilter.cpp  messagesortfilter.h
